packages/jokul/src/components/table/styles/_table-header.scss
@use "../../../core/jkl";

@include jkl.comfortable-density-variables {
    @include jkl.declare-font-variables("jkl-table-header", "body");

    --jkl-table-header-padding-inline: var(--jkl-spacing-12);
    --jkl-table-header-padding-block: var(--jkl-spacing-8);
}

@include jkl.compact-density-variables {
    @include jkl.declare-font-variables("jkl-table-header", "small");

    --jkl-table-header-padding-inline: var(--jkl-spacing-8);
    --jkl-table-header-padding-block: var(--jkl-spacing-4);
}

.jkl-table-header {
    @include jkl.use-font-variables("jkl-table-header");

    padding-block: var(--jkl-table-header-padding-block);
    padding-inline: var(--jkl-table-header-padding-inline);
    text-align: left;
    white-space: nowrap;

    &--align-center {
        text-align: center;
    }

    &--align-right {
        text-align: right;
    }

    &--bold {
        font-weight: var(--jkl-typography-weight-bold);
    }

    &--sortable {
        cursor: pointer;
        user-select: none;
    }

    &--sr-only {
        @include jkl.screenreader-only;
    }

    &__arrows {
        display: flex;
        gap: var(--jkl-spacing-4);
        align-items: center;
    }

    @mixin _responsive-table-header {
        display: none;
    }

    .jkl-table--collapse-to-list & {
        @include jkl.small-device {
            @include _responsive-table-header;
        }
    }

    .jkl-table--collapse-to-list[data-collapse] & {
        @include _responsive-table-header;
    }
}

